nullaway_error_287D4D46-F590-4BC8-A5AE-7288058E989E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/rsocket/service/RSocketServiceMethod.java:116: error: [NullAway] passing @Nullable parameter 'route1' where @NonNull is required
			return strategies.routeMatcher().combine(route1, route2);
			                                         ^
    (see http://t.uber.com/nullaway )
